# MirrorBeam

./: .gitignore  PRIVACY.md  README.md
electron-app/: BUILD.md  electron-builder-appx.json  index.html  licenses.html  main.js  package-lock.json  package.json  preload.js  window-styler.ps1
electron-app/scripts/: make-bundle.sh
uxplay-src/src/: CMakeLists.txt  README.html  README.md  README.txt  uxplay.1  uxplay.cpp  uxplay.service  uxplay.spec
uxplay-src/src/.github/workflows/: build.yml
uxplay-src/src/Bluetooth_LE_beacon/: uxplay-beacon.1  uxplay-beacon.py  uxplay_beacon_module_BleuIO.py  uxplay_beacon_module_BlueZ.py  uxplay_beacon_module_HCI.py  uxplay_beacon_module_winrt.py
uxplay-src/src/lib/: CMakeLists.txt  airplay_video.c  airplay_video.h  crypto.c  dnssd.c  dnssd.h  fairplay_playfair.c  fcup_request.h  http_handlers.h  http_request.c  http_request.h  http_response.c  httpd.c  logger.c  mirror_buffer.c  netutils.c  pairing.c  raop.c  raop.h  raop_buffer.c  raop_handlers.h  raop_ntp.c  raop_rtp.c  raop_rtp_mirror.c  sockets.h  srp.c  utils.c  utils.h
uxplay-src/src/lib/dns_sd/: CMakeLists.txt  dns_sd.c
uxplay-src/src/lib/mdnsd/: CMakeLists.txt  dnssd_mdnsd.c  mdnsd.c  mdnsd.h
uxplay-src/src/renderers/: CMakeLists.txt  audio_renderer.c  audio_renderer.h  mux_renderer.c  mux_renderer.h  video_renderer.c  video_renderer.h  x_display_fix.h
